2/y.output
   0  $accept : program $end

   1  program : translation_unit

   2  translation_unit : external_declaration
   3                   | translation_unit external_declaration

   4  external_declaration : function_definition
   5                       | declaration

   6  function_definition : declaration_specifiers declarator compound_statement
   7                      | declarator compound_statement

   8  declaration : declaration_specifiers init_declarator_list SEMICOLON

   9  declaration_specifiers : type_specifier
  10                         | storage_class_specifier
  11                         | type_qualifier
  12                         | type_specifier declaration_specifiers
  13                         | type_qualifier declaration_specifiers

  14  storage_class_specifier : AUTO_SYM
  15                          | STATIC_SYM
  16                          | TYPEDEF_SYM
  17                          | REGISTER_SYM
  18                          | EXTERN_SYM

  19  type_qualifier : CONST_SYM
  20                 | VOLATILE_SYM

  21  init_declarator_list : init_declarator
  22                       | init_declarator_list COMMA init_declarator
  23                       |

  24  init_declarator : declarator
  25                  | declarator ASSIGN initializer

  26  type_specifier : struct_specifier
  27                 | enum_specifier
  28                 | TYPE_IDENTIFIER

  29  struct_specifier : struct_or_union IDENTIFIER LR struct_declaration_list RR
  30                   | struct_or_union LR struct_declaration_list RR
  31                   | struct_or_union IDENTIFIER

  32  struct_or_union : STRUCT_SYM
  33                  | UNION_SYM

  34  struct_declaration_list : struct_declaration
  35                          | struct_declaration_list struct_declaration

  36  struct_declaration : specifier_qualifier_list struct_declarator_list SEMICOLON

  37  specifier_qualifier_list : type_specifier
  38                           | type_qualifier
  39                           | type_specifier specifier_qualifier_list
  40                           | type_qualifier specifier_qualifier_list

  41  struct_declarator_list : struct_declarator
  42                         | struct_declarator_list COMMA struct_declarator

  43  struct_declarator : declarator
  44                    | COLON constant_expression
  45                    | declarator COLON constant_expression

  46  enum_specifier : ENUM_SYM IDENTIFIER LR enumerator_list RR
  47                 | ENUM_SYM LR enumerator_list RR
  48                 | ENUM_SYM IDENTIFIER

  49  enumerator_list : enumerator
  50                  | enumerator_list COMMA enumerator

  51  enumerator : IDENTIFIER
  52             | IDENTIFIER ASSIGN constant_expression

  53  declarator : pointer direct_declarator
  54             | direct_declarator

  55  pointer : STAR
  56          | STAR pointer

  57  direct_declarator : IDENTIFIER
  58                    | LP declarator RP
  59                    | direct_declarator LB constant_expression_opt RB
  60                    | direct_declarator LP parameter_type_list_opt RP

  61  constant_expression_opt :
  62                          | constant_expression

  63  parameter_type_list_opt :
  64                          | parameter_type_list

  65  parameter_type_list : parameter_list
  66                      | parameter_list COMMA DOTDOTDOT

  67  parameter_list : parameter_declaration
  68                 | parameter_list COMMA parameter_declaration

  69  parameter_declaration : declaration_specifiers declarator
  70                        | declaration_specifiers abstract_declarator_opt

  71  abstract_declarator_opt :
  72                          | abstract_declarator

  73  abstract_declarator : pointer
  74                      | direct_abstract_declarator
  75                      | pointer direct_abstract_declarator

  76  direct_abstract_declarator : LP abstract_declarator RP
  77                             | LB constant_expression_opt RB
  78                             | LP parameter_type_list_opt RP
  79                             | direct_abstract_declarator LB constant_expression_opt RB
  80                             | direct_abstract_declarator LP parameter_type_list_opt RP

  81  initializer : expression
  82              | LR initializer_list RR
  83              | LR initializer_list COMMA RR

  84  initializer_list : initializer
  85                   | initializer_list COMMA initializer

  86  statement : labeled_statement
  87            | compound_statement
  88            | expression_statement
  89            | selection_statement
  90            | iteration_statement
  91            | jump_statement

  92  labeled_statement : CASE_SYM constant_expression COLON statement
  93                    | DEFAULT_SYM COLON statement
  94                    | IDENTIFIER COLON statement

  95  compound_statement : LR declaration_list statement_list RR

  96  declaration_list :
  97                   | declaration_list declaration

  98  statement_list :
  99                 | statement_list statement

 100  expression_statement : SEMICOLON
 101                       | expression SEMICOLON

 102  selection_statement : IF_SYM LP expression RP statement
 103                      | IF_SYM LP expression RP statement ELSE_SYM statement
 104                      | SWITCH_SYM LP expression RP statement

 105  iteration_statement : WHILE_SYM LP expression RP statement
 106                      | DO_SYM statement WHILE_SYM LP expression RP SEMICOLON
 107                      | FOR_SYM LP expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP statement

 108  expression_opt :
 109                 | expression

 110  jump_statement : RETURN_SYM expression_opt SEMICOLON
 111                 | CONTINUE_SYM SEMICOLON
 112                 | BREAK_SYM SEMICOLON
 113                 | GOTO_SYM IDENTIFIER SEMICOLON

 114  primary_expression : IDENTIFIER
 115                     | INTEGER_CONSTANT
 116                     | FLOAT_CONSTANT
 117                     | CHARACTER_CONSTANT
 118                     | STRING_LITERAL
 119                     | LP expression RP

 120  postfix_expression : primary_expression
 121                     | postfix_expression LB expression RB
 122                     | postfix_expression LP arg_expression_list_opt RP
 123                     | postfix_expression PERIOD IDENTIFIER
 124                     | postfix_expression ARROW IDENTIFIER
 125                     | postfix_expression PLUSPLUS
 126                     | postfix_expression MINUSMINUS

 127  arg_expression_list_opt :
 128                          | arg_expression_list

 129  arg_expression_list : assignment_expression
 130                      | arg_expression_list COMMA assignment_expression

 131  unary_expression : postfix_expression
 132                   | PLUSPLUS unary_expression
 133                   | MINUSMINUS unary_expression
 134                   | AMP cast_expression
 135                   | STAR cast_expression
 136                   | EXCL cast_expression
 137                   | MINUS cast_expression
 138                   | FLOW cast_expression
 139                   | PLUS cast_expression
 140                   | SIZEOF_SYM unary_expression
 141                   | SIZEOF_SYM LP type_name RP

 142  cast_expression : unary_expression
 143                  | LP type_name RP cast_expression

 144  type_name : declaration_specifiers
 145            | declaration_specifiers abstract_declarator

 146  multiplicative_expression : cast_expression
 147                            | multiplicative_expression STAR cast_expression
 148                            | multiplicative_expression SLASH cast_expression
 149                            | multiplicative_expression PERCENT cast_expression

 150  additive_expression : multiplicative_expression
 151                      | additive_expression PLUS multiplicative_expression
 152                      | additive_expression MINUS multiplicative_expression

 153  shift_expression : additive_expression
 154                   | shift_expression LSHIFT additive_expression
 155                   | shift_expression RSHIFT additive_expression

 156  relational_expression : shift_expression
 157                        | relational_expression LSS shift_expression
 158                        | relational_expression GTR shift_expression
 159                        | relational_expression LEQ shift_expression
 160                        | relational_expression GEQ shift_expression

 161  equality_expression : relational_expression
 162                      | equality_expression EQL relational_expression
 163                      | equality_expression NEQ relational_expression

 164  AND_expression : equality_expression
 165                 | AND_expression AMP equality_expression

 166  exclusive_OR_expression : AND_expression
 167                          | exclusive_OR_expression EOR AND_expression

 168  inclusive_OR_expression : exclusive_OR_expression
 169                          | inclusive_OR_expression IOR exclusive_OR_expression

 170  logical_AND_expression : inclusive_OR_expression
 171                         | logical_AND_expression AMPAMP inclusive_OR_expression

 172  logical_OR_expression : logical_AND_expression
 173                        | logical_OR_expression BARBAR logical_AND_expression

 174  conditional_expression : logical_OR_expression
 175                         | logical_OR_expression QMK expression COLON conditional_expression

 176  assignment_expression : conditional_expression
 177                        | unary_expression ASSIGN assignment_expression

 178  comma_expression : assignment_expression

 179  expression : comma_expression

 180  constant_expression : expression

state 0
	$accept : . program $end  (0)

	IDENTIFIER  shift 1
	TYPE_IDENTIFIER  shift 2
	STAR  shift 3
	LP  shift 4
	UNION_SYM  shift 5
	TYPEDEF_SYM  shift 6
	STRUCT_SYM  shift 7
	STATIC_SYM  shift 8
	ENUM_SYM  shift 9
	AUTO_SYM  shift 10
	REGISTER_SYM  shift 11
	EXTERN_SYM  shift 12
	CONST_SYM  shift 13
	VOLATILE_SYM  shift 14
	.  error

	program  goto 15
	translation_unit  goto 16
	external_declaration  goto 17
	function_definition  goto 18
	declaration  goto 19
	declaration_specifiers  goto 20
	declarator  goto 21
	type_specifier  goto 22
	storage_class_specifier  goto 23
	type_qualifier  goto 24
	struct_specifier  goto 25
	enum_specifier  goto 26
	struct_or_union  goto 27
	pointer  goto 28
	direct_declarator  goto 29


state 1
	direct_declarator : IDENTIFIER .  (57)

	.  reduce 57


state 2
	type_specifier : TYPE_IDENTIFIER .  (28)

	.  reduce 28


state 3
	pointer : STAR .  (55)
	pointer : STAR . pointer  (56)

	STAR  shift 3
	IDENTIFIER  reduce 55
	COMMA  reduce 55
	LB  reduce 55
	RP  reduce 55
	LP  reduce 55

	pointer  goto 30


state 4
	direct_declarator : LP . declarator RP  (58)

	IDENTIFIER  shift 1
	STAR  shift 3
	LP  shift 4
	.  error

	declarator  goto 31
	pointer  goto 28
	direct_declarator  goto 29


state 5
	struct_or_union : UNION_SYM .  (33)

	.  reduce 33


state 6
	storage_class_specifier : TYPEDEF_SYM .  (16)

	.  reduce 16


state 7
	struct_or_union : STRUCT_SYM .  (32)

	.  reduce 32


state 8
	storage_class_specifier : STATIC_SYM .  (15)

	.  reduce 15


state 9
	enum_specifier : ENUM_SYM . IDENTIFIER LR enumerator_list RR  (46)
	enum_specifier : ENUM_SYM . LR enumerator_list RR  (47)
	enum_specifier : ENUM_SYM . IDENTIFIER  (48)

	IDENTIFIER  shift 32
	LR  shift 33
	.  error


state 10
	storage_class_specifier : AUTO_SYM .  (14)

	.  reduce 14


state 11
	storage_class_specifier : REGISTER_SYM .  (17)

	.  reduce 17


state 12
	storage_class_specifier : EXTERN_SYM .  (18)

	.  reduce 18


state 13
	type_qualifier : CONST_SYM .  (19)

	.  reduce 19


state 14
	type_qualifier : VOLATILE_SYM .  (20)

	.  reduce 20


state 15
	$accept : program . $end  (0)

	$end  accept


state 16
	program : translation_unit .  (1)
	translation_unit : translation_unit . external_declaration  (3)

	IDENTIFIER  shift 1
	TYPE_IDENTIFIER  shift 2
	STAR  shift 3
	LP  shift 4
	UNION_SYM  shift 5
	TYPEDEF_SYM  shift 6
	STRUCT_SYM  shift 7
	STATIC_SYM  shift 8
	ENUM_SYM  shift 9
	AUTO_SYM  shift 10
	REGISTER_SYM  shift 11
	EXTERN_SYM  shift 12
	CONST_SYM  shift 13
	VOLATILE_SYM  shift 14
	$end  reduce 1

	external_declaration  goto 34
	function_definition  goto 18
	declaration  goto 19
	declaration_specifiers  goto 20
	declarator  goto 21
	type_specifier  goto 22
	storage_class_specifier  goto 23
	type_qualifier  goto 24
	struct_specifier  goto 25
	enum_specifier  goto 26
	struct_or_union  goto 27
	pointer  goto 28
	direct_declarator  goto 29


state 17
	translation_unit : external_declaration .  (2)

	.  reduce 2


state 18
	external_declaration : function_definition .  (4)

	.  reduce 4


state 19
	external_declaration : declaration .  (5)

	.  reduce 5


state 20
	function_definition : declaration_specifiers . declarator compound_statement  (6)
	declaration : declaration_specifiers . init_declarator_list SEMICOLON  (8)
	init_declarator_list : .  (23)

	IDENTIFIER  shift 1
	STAR  shift 3
	LP  shift 4
	SEMICOLON  reduce 23
	COMMA  reduce 23

	declarator  goto 35
	init_declarator_list  goto 36
	init_declarator  goto 37
	pointer  goto 28
	direct_declarator  goto 29


state 21
	function_definition : declarator . compound_statement  (7)

	LR  shift 38
	.  error

	compound_statement  goto 39


state 22
	declaration_specifiers : type_specifier .  (9)
	declaration_specifiers : type_specifier . declaration_specifiers  (12)

	TYPE_IDENTIFIER  shift 2
	UNION_SYM  shift 5
	TYPEDEF_SYM  shift 6
	STRUCT_SYM  shift 7
	STATIC_SYM  shift 8
	ENUM_SYM  shift 9
	AUTO_SYM  shift 10
	REGISTER_SYM  shift 11
	EXTERN_SYM  shift 12
	CONST_SYM  shift 13
	VOLATILE_SYM  shift 14
	IDENTIFIER  reduce 9
	SEMICOLON  reduce 9
	STAR  reduce 9
	COMMA  reduce 9
	LB  reduce 9
	RP  reduce 9
	LP  reduce 9

	declaration_specifiers  goto 40
	type_specifier  goto 22
	storage_class_specifier  goto 23
	type_qualifier  goto 24
	struct_specifier  goto 25
	enum_specifier  goto 26
	struct_or_union  goto 27


state 23
	declaration_specifiers : storage_class_specifier .  (10)

	.  reduce 10


state 24
	declaration_specifiers : type_qualifier .  (11)
	declaration_specifiers : type_qualifier . declaration_specifiers  (13)

	TYPE_IDENTIFIER  shift 2
	UNION_SYM  shift 5
	TYPEDEF_SYM  shift 6
	STRUCT_SYM  shift 7
	STATIC_SYM  shift 8
	ENUM_SYM  shift 9
	AUTO_SYM  shift 10
	REGISTER_SYM  shift 11
	EXTERN_SYM  shift 12
	CONST_SYM  shift 13
	VOLATILE_SYM  shift 14
	IDENTIFIER  reduce 11
	SEMICOLON  reduce 11
	STAR  reduce 11
	COMMA  reduce 11
	LB  reduce 11
	RP  reduce 11
	LP  reduce 11

	declaration_specifiers  goto 41
	type_specifier  goto 22
	storage_class_specifier  goto 23
	type_qualifier  goto 24
	struct_specifier  goto 25
	enum_specifier  goto 26
	struct_or_union  goto 27


state 25
	type_specifier : struct_specifier .  (26)

	.  reduce 26


state 26
	type_specifier : enum_specifier .  (27)

	.  reduce 27


state 27
	struct_specifier : struct_or_union . IDENTIFIER LR struct_declaration_list RR  (29)
	struct_specifier : struct_or_union . LR struct_declaration_list RR  (30)
	struct_specifier : struct_or_union . IDENTIFIER  (31)

	IDENTIFIER  shift 42
	LR  shift 43
	.  error


state 28
	declarator : pointer . direct_declarator  (53)

	IDENTIFIER  shift 1
	LP  shift 4
	.  error

	direct_declarator  goto 44


state 29
	declarator : direct_declarator .  (54)
	direct_declarator : direct_declarator . LB constant_expression_opt RB  (59)
	direct_declarator : direct_declarator . LP parameter_type_list_opt RP  (60)

	LB  shift 45
	LP  shift 46
	ASSIGN  reduce 54
	SEMICOLON  reduce 54
	COMMA  reduce 54
	COLON  reduce 54
	LR  reduce 54
	RP  reduce 54


state 30
	pointer : STAR pointer .  (56)

	.  reduce 56


state 31
	direct_declarator : LP declarator . RP  (58)

	RP  shift 47
	.  error


state 32
	enum_specifier : ENUM_SYM IDENTIFIER . LR enumerator_list RR  (46)
	enum_specifier : ENUM_SYM IDENTIFIER .  (48)

	LR  shift 48
	IDENTIFIER  reduce 48
	TYPE_IDENTIFIER  reduce 48
	SEMICOLON  reduce 48
	STAR  reduce 48
	COMMA  reduce 48
	COLON  reduce 48
	LB  reduce 48
	RP  reduce 48
	LP  reduce 48
	UNION_SYM  reduce 48
	TYPEDEF_SYM  reduce 48
	STRUCT_SYM  reduce 48
	STATIC_SYM  reduce 48
	ENUM_SYM  reduce 48
	AUTO_SYM  reduce 48
	REGISTER_SYM  reduce 48
	EXTERN_SYM  reduce 48
	CONST_SYM  reduce 48
	VOLATILE_SYM  reduce 48


state 33
	enum_specifier : ENUM_SYM LR . enumerator_list RR  (47)

	IDENTIFIER  shift 49
	.  error

	enumerator_list  goto 50
	enumerator  goto 51


state 34
	translation_unit : translation_unit external_declaration .  (3)

	.  reduce 3


state 35
	function_definition : declaration_specifiers declarator . compound_statement  (6)
	init_declarator : declarator .  (24)
	init_declarator : declarator . ASSIGN initializer  (25)

	ASSIGN  shift 52
	LR  shift 38
	SEMICOLON  reduce 24
	COMMA  reduce 24

	compound_statement  goto 53


state 36
	declaration : declaration_specifiers init_declarator_list . SEMICOLON  (8)
	init_declarator_list : init_declarator_list . COMMA init_declarator  (22)

	SEMICOLON  shift 54
	COMMA  shift 55
	.  error


state 37
	init_declarator_list : init_declarator .  (21)

	.  reduce 21


state 38
	compound_statement : LR . declaration_list statement_list RR  (95)
	declaration_list : .  (96)

	.  reduce 96

	declaration_list  goto 56


state 39
	function_definition : declarator compound_statement .  (7)

	.  reduce 7


state 40
	declaration_specifiers : type_specifier declaration_specifiers .  (12)

	.  reduce 12


state 41
	declaration_specifiers : type_qualifier declaration_specifiers .  (13)

	.  reduce 13


state 42
	struct_specifier : struct_or_union IDENTIFIER . LR struct_declaration_list RR  (29)
	struct_specifier : struct_or_union IDENTIFIER .  (31)

	LR  shift 57
	IDENTIFIER  reduce 31
	TYPE_IDENTIFIER  reduce 31
	SEMICOLON  reduce 31
	STAR  reduce 31
	COMMA  reduce 31
	COLON  reduce 31
	LB  reduce 31
	RP  reduce 31
	LP  reduce 31
	UNION_SYM  reduce 31
	TYPEDEF_SYM  reduce 31
	STRUCT_SYM  reduce 31
	STATIC_SYM  reduce 31
	ENUM_SYM  reduce 31
	AUTO_SYM  reduce 31
	REGISTER_SYM  reduce 31
	EXTERN_SYM  reduce 31
	CONST_SYM  reduce 31
	VOLATILE_SYM  reduce 31


state 43
	struct_specifier : struct_or_union LR . struct_declaration_list RR  (30)

	TYPE_IDENTIFIER  shift 2
	UNION_SYM  shift 5
	STRUCT_SYM  shift 7
	ENUM_SYM  shift 9
	CONST_SYM  shift 13
	VOLATILE_SYM  shift 14
	.  error

	type_specifier  goto 58
	type_qualifier  goto 59
	struct_specifier  goto 25
	enum_specifier  goto 26
	struct_or_union  goto 27
	struct_declaration_list  goto 60
	struct_declaration  goto 61
	specifier_qualifier_list  goto 62


state 44
	declarator : pointer direct_declarator .  (53)
	direct_declarator : direct_declarator . LB constant_expression_opt RB  (59)
	direct_declarator : direct_declarator . LP parameter_type_list_opt RP  (60)

	LB  shift 45
	LP  shift 46
	ASSIGN  reduce 53
	SEMICOLON  reduce 53
	COMMA  reduce 53
	COLON  reduce 53
	LR  reduce 53
	RP  reduce 53


state 45
	direct_declarator : direct_declarator LB . constant_expression_opt RB  (59)
	constant_expression_opt : .  (61)

	IDENTIFIER  shift 63
	FLOAT_CONSTANT  shift 64
	INTEGER_CONSTANT  shift 65
	STRING_LITERAL  shift 66
	CHARACTER_CONSTANT  shift 67
	MINUS  shift 68
	PLUS  shift 69
	AMP  shift 70
	STAR  shift 71
	EXCL  shift 72
	LP  shift 73
	MINUSMINUS  shift 74
	PLUSPLUS  shift 75
	SIZEOF_SYM  shift 76
	FLOW  shift 77
	RB  reduce 61

	constant_expression  goto 78
	constant_expression_opt  goto 79
	expression  goto 80
	primary_expression  goto 81
	postfix_expression  goto 82
	assignment_expression  goto 83
	unary_expression  goto 84
	cast_expression  goto 85
	multiplicative_expression  goto 86
	additive_expression  goto 87
	shift_expression  goto 88
	relational_expression  goto 89
	equality_expression  goto 90
	AND_expression  goto 91
	exclusive_OR_expression  goto 92
	inclusive_OR_expression  goto 93
	logical_AND_expression  goto 94
	logical_OR_expression  goto 95
	conditional_expression  goto 96
	comma_expression  goto 97


state 46
	direct_declarator : direct_declarator LP . parameter_type_list_opt RP  (60)
	parameter_type_list_opt : .  (63)

	TYPE_IDENTIFIER  shift 2
	UNION_SYM  shift 5
	TYPEDEF_SYM  shift 6
	STRUCT_SYM  shift 7
	STATIC_SYM  shift 8
	ENUM_SYM  shift 9
	AUTO_SYM  shift 10
	REGISTER_SYM  shift 11
	EXTERN_SYM  shift 12
	CONST_SYM  shift 13
	VOLATILE_SYM  shift 14
	RP  reduce 63

	declaration_specifiers  goto 98
	type_specifier  goto 22
	storage_class_specifier  goto 23
	type_qualifier  goto 24
	struct_specifier  goto 25
	enum_specifier  goto 26
	struct_or_union  goto 27
	parameter_type_list_opt  goto 99
	parameter_type_list  goto 100
	parameter_list  goto 101
	parameter_declaration  goto 102


state 47
	direct_declarator : LP declarator RP .  (58)

	.  reduce 58


state 48
	enum_specifier : ENUM_SYM IDENTIFIER LR . enumerator_list RR  (46)

	IDENTIFIER  shift 49
	.  error

	enumerator_list  goto 103
	enumerator  goto 51


state 49
	enumerator : IDENTIFIER .  (51)
	enumerator : IDENTIFIER . ASSIGN constant_expression  (52)

	ASSIGN  shift 104
	COMMA  reduce 51
	RR  reduce 51


state 50
	enum_specifier : ENUM_SYM LR enumerator_list . RR  (47)
	enumerator_list : enumerator_list . COMMA enumerator  (50)

	COMMA  shift 105
	RR  shift 106
	.  error


state 51
	enumerator_list : enumerator .  (49)

	.  reduce 49


state 52
	init_declarator : declarator ASSIGN . initializer  (25)

	IDENTIFIER  shift 63
	FLOAT_CONSTANT  shift 64
	INTEGER_CONSTANT  shift 65
	STRING_LITERAL  shift 66
	CHARACTER_CONSTANT  shift 67
	MINUS  shift 68
	PLUS  shift 69
	AMP  shift 70
	STAR  shift 71
	EXCL  shift 72
	LR  shift 107
	LP  shift 73
	MINUSMINUS  shift 74
	PLUSPLUS  shift 75
	SIZEOF_SYM  shift 76
	FLOW  shift 77
	.  error
